swagger personnel
